# causarray

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  environment-r.yaml  environment.yaml  pyproject.toml  setup.cfg
.github/workflows/: publish-to-pypi.yml
causarray/: DR_estimation.py  DR_inference.py  DR_learner.py  __init__.py  _version.py  diagnostics.py  estimation.py  gcate.py  gcate_glm.py  gcate_opt.py  glm_test.py  nb_glm_fast.py  utils.py
docs/: CHANGELOG.md  requirement.txt  requirements.txt
docs/source/: conf.py  index.rst
docs/source/main_function/: gcate.rst  lfc.rst  preprocess.rst
docs/source/tutorial/: perturbseq-py.ipynb  perturbseq-r.Rmd  perturbseq-r.csv  perturbseq-r.md
docs/source/tutorial/case_control/: preprocess_sea_ad.py  sea_ad_case_control.ipynb  sea_ad_gcate.pkl  sea_ad_lfc.csv  sea_ad_r.csv
docs/source/tutorial/perturbseq/: perturbseq-fast-comparison.ipynb  perturbseq-py.ipynb  perturbseq-r.Rmd  perturbseq-r.md
docs/source/tutorial/replogle/: cache_propensity_batch.py  prep_tutorial_data.py  replogle-pooled-py.ipynb  replogle-py.ipynb  replogle-r.csv
methods/: R_functions.R  cinemaot.py  metrics.py
methods/causarray/: DR_estimation.py  DR_inference.py  DR_learner.py  __init__.py  gcate.py  gcate_glm.py  gcate_likelihood.py  gcate_opt.py  utils.py
paper/: README.md  environment.yml
paper/AD/: GO.R  Plot.ipynb
paper/AD/results/: GO_causarray.csv  GO_ruv.csv
paper/ROSMAP-AD/: 1-preprocess.R  1-preprocess.ipynb  2-DE.R  3-GO.R  4-CATE.py  genes.csv  run.sh
paper/SEA-AD/: 1-preprocess.R  1-preprocess.py  2-DE.R  3-GO.R  genes.csv  run.sh
paper/methods/: R_functions.R  cinemaot.py  metrics.py
paper/methods/causarray/: DR_estimation.py  DR_inference.py  DR_learner.py  __init__.py  gcate.py  gcate_glm.py  gcate_opt.py  utils.py
paper/perturbseq/: 1-preprocess.R  2-DE.R  3-GO.R  Plot.ipynb  run.sh
paper/simu_nb/: Plot.ipynb  simu_nb.sh  simu_nb_data.R  simu_nb_fit.R  simu_nb_plot.py
paper/simu_poi/: Plot.ipynb  simu_poi.sh  simu_poi_data.py  simu_poi_fit.R  simu_poi_plot.py
tests/: test_DR_learner.py  test_batch_fitting.py  test_deconfounding.py  test_diagnostics.py  test_fit_glm_numpy.py  test_gcate.py  test_gcate_convergence.py  test_inference_comprehensive.py  test_nb_glm_fast.py  test_nb_glm_integration.py  test_propensity.py
tutorial/: perturbseq.ipynb
