[metadata]
name = causarray
description = causarray is a Python module for A Python package for simultaneous causal inference with an array of outcomes.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/jaydu1/causarray
project_urls =
    Bug Tracker = https://github.com/jaydu1/causarray/issues
    Changelog = https://github.com/jaydu1/causarray/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    pip
    numpy
    numba
    pandas
    scipy
    scikit-learn
    statsmodels
    tqdm
    joblib
    matplotlib
    sklearn_ensemble_cv